--- a/styling.css
+++ b/styling.css
@@ -1,12 +1,12 @@
 body 
 {
-	background-color: lightblue;
+	background-color: #efefef;
 	text-align: center;
 }
 
 h1 
 {
-	color: white;
+	color: green;
 	text-align: center;
 }
 
